проброс searchQuery + создание компонетнов

--- a/my-first-project/src/app/filter-block/filter-by-word/filter-by-word.component.html
+++ b/my-first-project/src/app/filter-block/filter-by-word/filter-by-word.component.html
@@ -1,1 +1,5 @@
-<p>filter-by-word works!</p>
+by word or sentance
+<mat-form-field appearance="fill">
+    <!-- <mat-label>First name</mat-label> -->
+    <input matInput style="border: 1px solid blue">
+</mat-form-field>
