--- a/my-first-project/src/app/header/login-block/login-block.component.html
+++ b/my-first-project/src/app/header/login-block/login-block.component.html
@@ -1,1 +1,5 @@
-<p>login-block works!</p>
+<div class="login-bnt">
+    <button mat-icon-button class="mat-primary" aria-label="Example icon-button with a heart icon">
+        <mat-icon>account_circle</mat-icon>
+    </button>
+</div>
