--- a/my-first-project/src/app/header/logo/logo.component.html
+++ b/my-first-project/src/app/header/logo/logo.component.html
@@ -1,3 +1,5 @@
-<div>
-    <mat-icon></mat-icon>
-</div>
+<span class="">
+
+    <mat-icon aria-hidden="false" aria-label="Example home icon"> electric_bolt</mat-icon>
+
+</span>
