--- a/my-first-project/src/app/app.component.html
+++ b/my-first-project/src/app/app.component.html
@@ -1,4 +1,7 @@
-<app-header></app-header>
-<app-search-result></app-search-result>
+<div class="search-block">
+    <app-header [searchQuery]="searchQuety"></app-header>
 
-<router-outlet></router-outlet>
+    <app-search-result [searchQuery]="searchQuety"></app-search-result>
+
+    <router-outlet></router-outlet>
+</div>
