--- a/my-first-project/src/app/filter-block/filter-block.component.html
+++ b/my-first-project/src/app/filter-block/filter-block.component.html
@@ -1,1 +1,6 @@
-<p>filter-block works!</p>
+<div class="filter-row">
+    Sorting by:
+    <app-filter-date></app-filter-date>
+    <app-filter-count-view></app-filter-count-view>
+    <app-filter-by-word></app-filter-by-word>
+</div>
