--- a/my-first-project/src/app/header/header.component.html
+++ b/my-first-project/src/app/header/header.component.html
@@ -2,9 +2,9 @@
     <div class="line-1">
         <app-logo></app-logo>
         <app-search-input></app-search-input>
-        <app-login-block></app-login-block>
+        <app-login-block class="login-bnt"></app-login-block>
     </div>
-    <div class="line-2">
+    <div class="line-2" *ngIf="searchQuery">
         <app-filter-block></app-filter-block>
     </div>
 </header>
