--- a/my-first-project/src/app/header/header.component.scss
+++ b/my-first-project/src/app/header/header.component.scss
@@ -1,5 +1,6 @@
 .line-1 {
     display: flex;
+    align-items: center;
 
 }
 
@@ -11,4 +12,8 @@
 header {
     width: 1000px;
     margin: 0 auto;
+}
+
+.login-bnt {
+    margin-left: auto;
 }
