--- a/my-first-project/src/app/header/search-input/search-input.component.html
+++ b/my-first-project/src/app/header/search-input/search-input.component.html
@@ -1,1 +1,7 @@
-<p>search-input works!</p>
+<form>
+    <mat-form-field class="example-full-width" appearance="fill">
+        <!-- <mat-label>First name</mat-label> -->
+        <input matInput>
+    </mat-form-field>
+    <button mat-button color="primary">search</button>
+</form>
