--- a/my-first-project/src/app/filter-block/filter-date/filter-date.component.html
+++ b/my-first-project/src/app/filter-block/filter-date/filter-date.component.html
@@ -1,1 +1,3 @@
-<button mat-button><span style="text-decoration: underline;">date</span></button>
+<button mat-button>
+    <span style="text-decoration: underline;">date</span>
+</button>
