--- a/my-first-project/src/app/search/search-result/search-result.component.scss
+++ b/my-first-project/src/app/search/search-result/search-result.component.scss
@@ -3,3 +3,14 @@
     margin: 0 auto;
     margin-top: 30px;
 }
+
+.search-block {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+
+    &>* {
+        width: 22%;
+        margin-bottom: 30px;
+    }
+}
