цвет бордера в зависимости от даты публикации

--- a/my-first-project/src/app/search/search-item/search-item.component.html
+++ b/my-first-project/src/app/search/search-item/search-item.component.html
@@ -1,4 +1,4 @@
-<div>
+<div [appBorderColor]="video.snippet.publishedAt" class="item">
     <img [src]="video.snippet.thumbnails.default.url" alt="">
     <div class="actions">
         <button>{{video.statistics.viewCount}}</button>
