--- a/my-first-project/src/app/header/settings/settings.component.html
+++ b/my-first-project/src/app/header/settings/settings.component.html
@@ -1,1 +1,5 @@
-<p>settings works!</p>
+<div class="settings-button">
+    <button mat-button (click)="onClick()">
+        <mat-icon color="primary">tune</mat-icon>
+    </button>
+</div>
