сортировка по дате

--- a/my-first-project/src/app/header/header.component.html
+++ b/my-first-project/src/app/header/header.component.html
@@ -6,6 +6,6 @@
         <app-login-block class="login-bnt"></app-login-block>
     </div>
     <div class="line-2" *ngIf="toggleSettins">
-        <app-filter-block></app-filter-block>
+        <app-filter-block (handlerSortByDate)="onSortByDate($event)"></app-filter-block>
     </div>
 </header>
