--- a/my-first-project/src/app/app.component.html
+++ b/my-first-project/src/app/app.component.html
@@ -1,7 +1,11 @@
 <div class="search-block">
-    <app-header [searchQuery]="searchQuety" (searchUserRequest)="handlerSearchUserRequest($event)"></app-header>
 
-    <app-search-result [searchQuery]="searchQuety"></app-search-result>
+    <app-header [searchQuery]="searchQuety" 
+        (searchUserRequest)="handlerSearchUserRequest($event)"
+        (handlerTypeSortByDate)="onSortByDate($event)">
+    </app-header>
+
+    <app-search-result [searchQuery]="searchQuety" [typeSort]="sortByDate" ></app-search-result>
 
     <router-outlet></router-outlet>
 </div>
