--- a/my-first-project/src/app/filter-block/filter-block.component.html
+++ b/my-first-project/src/app/filter-block/filter-block.component.html
@@ -1,6 +1,6 @@
 <div class="filter-row">
     Sorting by:
     <app-filter-date (handlerSortByDate)="onSortByDate($event)"></app-filter-date>
-    <app-filter-count-view></app-filter-count-view>
+    <app-filter-count-view (handlerSortByView)="onSortByView($event)"></app-filter-count-view>
     <app-filter-by-word></app-filter-by-word>
 </div>
