--- a/my-first-project/src/app/search/search-result/search-result.component.html
+++ b/my-first-project/src/app/search/search-result/search-result.component.html
@@ -1,3 +1,4 @@
 <div class="search-block" *ngIf="searchQuery">
-    <app-search-item *ngFor="let video of data.items | sortByDate:typeSort" [video]="video"></app-search-item>
+    <app-search-item *ngFor="let video of data.items | sortByDate:typeSort | sortByView:sortByViewTipe" 
+        [video]="video"></app-search-item>
 </div>
