фильтер по слову

--- a/my-first-project/src/app/app.component.html
+++ b/my-first-project/src/app/app.component.html
@@ -4,10 +4,15 @@
         (searchUserRequest)="handlerSearchUserRequest($event)"
         (handlerTypeSortByDate)="onSortByDate($event)"
         (handlerSortByView)="onSortByView($event)"
+        (handlerFilterByWord)="onFilterByWord($event)"
         >
     </app-header>
 
-    <app-search-result [searchQuery]="searchQuety" [typeSort]="sortByDate" [sortByViewTipe]="sortByView" ></app-search-result>
+    <app-search-result [searchQuery]="searchQuety" 
+        [typeSort]="sortByDate" 
+        [sortByViewTipe]="sortByView" 
+        [word]="filteredWord"
+        ></app-search-result>
 
     <router-outlet></router-outlet>
 </div>
