--- a/my-first-project/src/app/filter-block/filter-by-word/filter-by-word.component.html
+++ b/my-first-project/src/app/filter-block/filter-by-word/filter-by-word.component.html
@@ -1,5 +1,5 @@
 by word or sentance
 <mat-form-field appearance="fill">
     <!-- <mat-label>First name</mat-label> -->
-    <input matInput style="border: 1px solid blue">
+    <input matInput style="border: 1px solid blue" #userWord (input)="onInput(userWord.value)">
 </mat-form-field>
